@@ -16,6 +16,9 @@
 				"List::Util": "1.33",
 				"Ref::Util": "0.010",
 				"Scalar::Util": "1.39"
+			},
+			"suggests": {
+				"Pod::Usage": "1.64"
 			}
 		},
 		"test": {
