@@ -2,6 +2,7 @@
 
 use strict;
 use warnings;
+use Data::Dumper;
 use Getopt::Long;
 use JSON::XS qw/decode_json/;
 use Pod::Usage;
@@ -26,6 +27,22 @@ sub loadeval {
 	elsif($t=~/^[{]/) { eval "\%res=\%{ $t };"; if($@) { die "$@" } } # }
 	else              { die "$fn does not contain a valid configuration" }
 	return %res;
+}
+
+sub loadafter {
+	my ($fn)=@_;
+	my $t=load($fn);
+	my $previous;
+	eval $t;
+	if($@) { die "Loading after file failed:  $@" }
+	return %$previous;
+}
+
+sub saveafter {
+	my ($fn,$config,$schedule)=@_;
+	open(my $fh,'>',$fn);
+	print $fh Data::Dumper->new([{configuration=>$config,schedule=>$schedule}],['previous'])->Indent(0)->Purity(1)->Dump();
+	close($fh);
 }
 
 sub loadjson {
@@ -59,12 +76,15 @@ my %opt=(
 	unsafe    =>undef,
 	check     =>undef,
 	help      =>0,
+	manpage   =>0,
 	activity  =>[],
 	activities=>undef,
 	notemerge =>1,
 	noteorder =>undef,
 	tslack    =>undef,
 	tbuffer   =>undef,
+	after     =>undef,
+	save      =>undef,
 );
 
 GetOptions(
@@ -78,14 +98,25 @@ GetOptions(
 	'noteorder=s' =>\$opt{noteorder},
 	'tslack=f'    =>\$opt{tslack},
 	'tbuffer=f'   =>\$opt{tbuffer},
+	'after=s'     =>\$opt{after},
+	'save=s'      =>\$opt{save},
 	'help'        =>\$opt{help},
+	'man'         =>\$opt{man},
 );
+if($opt{man})  { pod2usage(-verbose=>2,-exitval=>2) }
 if($opt{help}) { pod2usage(-verbose=>1,-exitval=>2) }
 
-my %configuration=
+my (%configuration,%after);
+if($opt{after}) {
+	%after=loadafter($opt{after});
+	%configuration=%{$after{configuration}};
+	%after=(after=>$after{schedule});
+}
+else { %configuration=
 	$opt{schedule} ? loadeval($opt{schedule}) :
 	$opt{json}     ? loadjson($opt{json}) :
 	die 'Configuration is required';
+}
 
 my $scheduler=Schedule::Activity->new(unsafe=>$opt{unsafe},configuration=>\%configuration);
 my %check=$scheduler->compile();
@@ -95,11 +126,17 @@ if($opt{check}) {
 }
 
 if($opt{activities}) { foreach my $pair (split(/;/,$opt{activities})) { push @{$opt{activity}},$pair } }
-if(!@{$opt{activity}}) { die 'Activities are required' }
+if(!@{$opt{activity}}&&!$opt{after}) { die 'Activities are required' }
 for(my $i=0;$i<=$#{$opt{activity}};$i++) { $opt{activity}[$i]=[split(/,/,$opt{activity}[$i],2)] }
 
-my %schedule=$scheduler->schedule(activities=>$opt{activity},tensionslack=>$opt{tslack},tensionbuffer=>$opt{tbuffer});
+my %schedule=$scheduler->schedule(%after,activities=>$opt{activity},tensionslack=>$opt{tslack},tensionbuffer=>$opt{tbuffer});
 if($schedule{error}) { print STDERR join("\n",@{$schedule{error}}),"\n"; exit(1) }
+
+# Workaround.  Until other options are available, annotations canNOT be
+# materialized into the activity schedule.  Such nodes are unexpected
+# during subsequent annotation runs, and will need to be stashed/restored
+# if we want to support saving annotations incrementally.
+if($opt{save}) { $opt{notemerge}=0; saveafter($opt{save},\%configuration,\%schedule) }
 
 if($opt{notemerge}) {
 	my %seen;
@@ -155,6 +192,26 @@ Do not merge annotation messages into the final schedule.
 =head2 --unsafe
 
 Skip safety checks, allowing the schedule to contain cycles, non-terminating nodes, etcetera.  Useful during debugging and development.
+
+=head2 --after and --save
+
+Run with C<--man> or C<perldoc schedule-activity.pl> for details on these options.
+
+=head1 INCREMENTAL BUILDS
+
+Schedules can be incrementally constructed from a starting configuration as follows:
+
+  schedule-activity.pl --schedule=config.dump --activity=time,name --save=file1a.dat
+  schedule-activity.pl --after=file1a.dat --activity=time,name --save=file2a.dat
+  schedule-activity.pl --after=file2a.dat --nonotemerge
+
+The C<schedule> must be provided initially, and the C<activity> or C<activities> will be built into the list of scheduled activities normally.  Results are stored in the C<save> filename.  Use C<after> to specify a savefile as a starting point for scheduling.  As a special case, omitting an C<activity> list is permitted with an C<after> file, and the saved schedule will be shown on stdout.  The configuration does not need to be indicated after the bootstrapping step.
+
+This permits buliding multiple, randomized schedules from the configuration into separate files for comparison and selection.  Subsequent activities can be built incrementally to achieve targets not specified within the configuration (attribute goals, etc.).
+
+At each step, the schedule is output normally, including annotations unless C<nonotemerge> has been specified.
+
+Annotations are I<not> saved.  Annotations apply generally to all actions in a schedule, so incremental builds are not equivalent to a full schedule build.  While the annotations are shown with the output at each stage of construction, they are recomputed each time.
 
 =head1 NOTES
 
