@@ -1,6 +1,7 @@
 Revision history for Schedule::Activity
 
 0.2.1 - 2025-11-16
+	- Incremental schedule construction
 	- Improved script for --help and --man
 	- Fixed average value recalculation when dt==0
 
